--- a/WebContent/notice/detail.html
+++ b/WebContent/notice/detail.html
@@ -74,7 +74,7 @@
                         <h1 class="hidden">고객메뉴</h1>
                         <ul class="linear-layout">
                             <li><a href="/member/home"><img src="/images/txt-mypage.png" alt="마이페이지" /></a></li>
-                            <li><a href="/notice/list.html"><img src="/images/txt-customer.png" alt="고객센터" /></a></li>
+                            <li><a href="/notice/list.jsp"><img src="/images/txt-customer.png" alt="고객센터" /></a></li>
                         </ul>
                     </nav>
 
@@ -105,7 +105,7 @@
 				<nav class="menu text-menu first margin-top">
 					<h1>고객센터메뉴</h1>
 					<ul>
-						<li><a class="current"  href="/notice/list.html">공지사항</a></li>
+						<li><a class="current"  href="/notice/list.jsp">공지사항</a></li>
 						<li><a class=""  href="/customer/faq">자주하는 질문</a></li>
 						<li><a class="" href="/customer/question">수강문의</a></li>
 						<li><a class="" href="/customer/event">이벤트</a></li>
@@ -171,7 +171,7 @@
 					</div>
 					
 					<div class="margin-top text-align-center">
-						<a class="btn btn-list" href="list.html">목록</a>
+						<a class="btn btn-list" href="list.jsp">목록</a>
 					</div>
 					
 					<div class="margin-top">
