--- a/WebContent/notice/list.html
+++ b/WebContent/notice/list.html
@@ -105,7 +105,7 @@
 				<nav class="menu text-menu first margin-top">
 					<h1>고객센터메뉴</h1>
 					<ul>
-						<li><a class="current"  href="/customer/notice">공지사항</a></li>
+						<li><a class="current"  href="/notice/list.jsp">공지사항</a></li>
 						<li><a class=""  href="/customer/faq">자주하는 질문</a></li>
 						<li><a class="" href="/customer/question">수강문의</a></li>
 						<li><a class="" href="/customer/event">이벤트</a></li>
